# rslearn_projects

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  =1.0  DataLicense.txt  Dockerfile  Dockerfile.dev  README.md  SECRETS.md  ai2_requirements.txt  config.yaml  docker-bake.hcl  docker-compose.yaml  esrunner.Dockerfile  helios.Dockerfile  helios_update.Dockerfile  log_test.txt  olmoearth_pretrain.Dockerfile  olmoearth_run.Dockerfile  pyproject.toml  pyproject_esrunner.toml  requirements-dev.txt  requirements-esrun.txt  requirements-extra.txt  requirements-helios.txt  requirements-olmocore.txt  requirements-olmoearth_pretrain.txt  requirements-olmoearth_run.txt  requirements-without-rslearn.txt  requirements.txt
ai2_docs/: README.md
amazon_conservation/: README.md
beaker/: install.sh  launch.py
convert_satlas_webmercator_to_rslearn/: config.json
crop_type/: create_coverage_figure.py
docs/: coding_best_practices_brainstorm.md  internal.md  landsat_vessels.md  satlas_marine_infra.md  sentinel1_vessels.md  sentinel2_vessels.md
landsat/: convert_windows_to_utm.py  example_request.py  quick_vis_script.py
maldives_ecosystem_mapping/: README.md  config.json
one_off_projects/: __init__.py
pastis2/: .gitignore  README.md  build_pastis_rpg_map.py  build_windows.py  config.json  download_rpg.py  launch_national.py  make_tensors.py  pastis_rpg_class_map.json  rasterize_labels.py  territories.py  viz_tensors.py
rslp/: __init__.py  api_main.py  config.py  docker_entrypoint.py  espredict_runner.py  launch_beaker.py  launcher_lib.py  main.py  (+2 more)
(+2455 files in other folders)
