[project]
name = "rslearn_projects"
version = "0.0.1"
description = "rslearn projects at Ai2"
authors = [
    { name = "OlmoEarth Team" },
]
readme = "README.md"
requires-python = ">=3.10"

dynamic = ["dependencies", "optional-dependencies"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["rslp*"]

[tool.setuptools.dynamic.dependencies]
file = ["requirements.txt"]

[tool.setuptools.dynamic.optional-dependencies]
dev = { file = ["requirements-dev.txt"] }
extra = { file = ["requirements-extra.txt"] }
helios = { file = ["requirements-helios.txt"] }
olmoearth_run = { file = ["requirements-olmoearth_run.txt"] }

[tool.ruff]
fix = true

[tool.ruff.lint]
extend-select = ["D", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D"]
"convert_satlas_webmercator_to_rslearn/**" = ["D"]
"amazon_conservation/**" = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
addopts = [
    "--import-mode=importlib",
    # Ignore esrun tests by default because their dependencies are not installed in CI
    "--ignore=tests/unit/esrun",
]
